changed z-index because of fixed nav menu overflowing

--- a/src/Components/Baker/Baker.scss
+++ b/src/Components/Baker/Baker.scss
@@ -87,7 +87,7 @@
      }
 
      &_desktop {
-       z-index: 10000;
+       z-index: 200;
        display: none;
 
        &bg1 {
